--- a/README
+++ b/README
@@ -2,4 +2,6 @@ doctor-kleef
 ============
 
 round robin
-the making of drugaddicts
+making of drugaddicts
+'feeding' of drugaddicts
+killing of drugaddicte
